--- a/hackmit/package.json
+++ b/hackmit/package.json
@@ -15,6 +15,9 @@
     "serve-favicon": "~2.3.0",
     "stdio": "^0.2.7",
     "mongodb": "~1.4",
-    "mongoskin": "*"
+    "mongoskin": "*",
+    "connect-busboy": "*",
+    "path": "*",
+    "fs-extra": "*"
   }
 }
