--- a/app.json
+++ b/app.json
@@ -1,8 +1,5 @@
 {
-  "name": "Node.js Getting Started",
-  "description": "A barebones Node.js app using Express 4",
-  "repository": "https://github.com/heroku/node-js-getting-started",
-  "logo": "http://node-js-sample.herokuapp.com/node.svg",
-  "keywords": ["node", "express", "static"],
-  "image": "heroku/nodejs"
+  "name": "Impression",
+  "description": "[Description subject to change]",
+  "repository": "https://github.com/Impression",
 }
